--- a/css/components/meme-creator.css
+++ b/css/components/meme-creator.css
@@ -4,20 +4,29 @@
 }
 
 .editor-tools {
-  background-color: #ebeef370;
   width: 43.301875rem;
   height: 34.125rem;
   position: absolute;
   top: 0;
   left: 650px;
+  padding: 1.5125rem 2.51875rem;
+  background-color: #ebeef328;
+  border-radius: 29.83px;
+  margin-inline-start: 20.0625rem;
 }
 
 .main-editor-canvas {
-  padding-inline-start: 6.0625rem;
+  padding-inline-start: 25.0625rem;
   padding-inline-end: 5.625rem;
 }
 
 .meme-text {
-  padding: 0.7375rem 8.0375rem;
+  /* margin: 0 auto; */
+  padding: 0.7375rem 9.0375rem;
   font-size: 1.5625rem;
+  font-family: poppins-medium;
+  text-align: center;
+  border-radius: 28.04px;
+  box-shadow: inset 0px 5px 5px silver;
+  box-shadow: 0.26px 4.99px 1px #bbc4d1;
 }
