--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 /* SETUP */
-/* @import 'setup/vars.css';
-@import 'setup/typography.css'; */
+/* @import 'setup/vars.css'; */
+@import 'setup/typography.css';
 
 /* BASE */
 @import 'basic/base.css';
