--- a/css/components/meme-creator.css
+++ b/css/components/meme-creator.css
@@ -4,8 +4,8 @@
 }
 
 .editor-tools {
-  width: 43.301875rem;
-  height: 34.125rem;
+  width: 32.8125rem;
+  height: 34.1255rem;
   position: absolute;
   top: 0;
   left: 650px;
@@ -23,10 +23,41 @@
 .meme-text {
   /* margin: 0 auto; */
   padding: 0.7375rem 9.0375rem;
+  width: 27.7763rem;
   font-size: 1.5625rem;
   font-family: poppins-medium;
   text-align: center;
   border-radius: 28.04px;
   box-shadow: inset 0px 5px 5px silver;
   box-shadow: 0.26px 4.99px 1px #bbc4d1;
+}
+
+.change-color input[type='color'] {
+  display: none;
+}
+
+.visual-effects-tool-container {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  justify-content: center;
+  align-content: center;
+  background-color: #19a59f;
+  width: 27.875rem;
+  height: 9.340625rem;
+  margin: 1.5rem auto;
+  padding: 1.1rem;
+  border-radius: 15px;
+  /* gap: 15px; */
+}
+
+.drop-down-font {
+  grid-column-start: 2;
+}
+
+.control-meme-text-container {
+  padding-block-start: 1.99375rem;
+}
+
+.control-meme-text-container .btn {
+  padding-left: 1.25rem;
 }
