--- a/css/basic/base.css
+++ b/css/basic/base.css
@@ -4,4 +4,9 @@
 
 body {
   background: linear-gradient(90deg, rgba(246, 79, 139, 1) 0%, rgba(248, 133, 88, 1) 100%);
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
 }
