--- a/css/components/meme-gallery.css
+++ b/css/components/meme-gallery.css
@@ -5,7 +5,7 @@
 }
 
 .gallery-container {
-  padding: 50px 20px;
+  padding: 2.8125rem 4rem;
   background-color: #383b42;
   /* padding-inline-start: 22.575rem; */
   border-radius: 10px;
@@ -23,6 +23,34 @@
   font-family: poppins-light;
 }
 
+input.search-input {
+  background-image: url(/icons/search-icon.png);
+  background-repeat: no-repeat;
+  background-position-x: 30rem;
+  background-position-y: 0.8rem;
+}
+
+.sort-by {
+  width: 33.5rem;
+  height: 3.125rem;
+  background-color: #c2c2c2b6;
+  font-size: 1.223125rem;
+  color: white;
+  border-radius: 25px;
+  padding: 0.63125rem 1.49375rem;
+  font-family: poppins-regular;
+}
+
+.more-btn {
+  height: 3.25rem;
+  border-radius: 18px;
+  font-family: poppins-light;
+  color: white;
+  padding: 0.6rem 2rem;
+  font-size: 1.19875rem;
+  background: linear-gradient(90deg, rgba(12, 152, 185, 1) 0%, rgba(51, 190, 109, 1) 100%);
+}
+
 .meme-gallery {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(199.55px, 1fr));
@@ -37,6 +65,6 @@
 }
 
 .meme-img:hover {
-  transform: translateY(-2px);
   box-shadow: 3px 3px 10px black;
+  transform: translateY(-2px);
 }
