--- a/css/basic/base.css
+++ b/css/basic/base.css
@@ -4,6 +4,7 @@
 
 body {
   background: linear-gradient(90deg, rgba(246, 79, 139, 1) 0%, rgba(248, 133, 88, 1) 100%);
+  width: 100%;
   margin: 0;
 }
 
