--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@
 @import 'components/main-header.css';
 @import 'components/meme-gallery.css';
 @import 'components/meme-creator.css';
+@import 'components/screen.css';
 
-/* Media Queries
-@import 'mq/mq.css'; */
+/* Media Queries */
+@import 'mq/mq.css';
