--- a/css/components/meme-gallery.css
+++ b/css/components/meme-gallery.css
@@ -15,8 +15,6 @@
   background-color: #22252c;
   border-radius: 29px;
   width: 33.8125rem;
-  line-height: 3.625rem;
-  margin-bottom: 2.8125rem;
   padding-left: 1rem;
   font-size: 1.301875rem;
   border: none;
@@ -27,21 +25,25 @@ input.search-input {
   background-image: url(/icons/search-icon.png);
   background-repeat: no-repeat;
   background-position-x: 30rem;
-  background-position-y: 0.8rem;
+  background-position-y: 0.5rem;
+}
+
+.filter-by-more-btn-container {
+  flex-grow: 1;
+  height: 3rem;
+  align-items: center;
 }
 
 .sort-by {
   /* box-sizing: content-box; */
-  height: 3.625rem;
+  width: 100%;
   background-color: #c2c2c2b6;
-
-  padding-inline-start: 10rem;
-  padding-inline-end: 5rem;
-  padding-block-start: 0.5rem;
-  padding-block-end: 1.5rem;
+  flex-grow: 1;
   color: white;
   border-radius: 50px;
   font-family: poppins-regular;
+  font-size: 2rem;
+  justify-content: space-around;
 }
 
 .more-btn {
@@ -52,8 +54,6 @@ input.search-input {
   padding-inline-start: 2rem;
   padding-inline-end: 2rem;
   padding-block-start: 0.3rem;
-  margin-block-start: 0.5rem;
-  margin-inline-start: 9rem;
   font-size: 1.19875rem;
   background: linear-gradient(90deg, rgba(12, 152, 185, 1) 0%, rgba(51, 190, 109, 1) 100%);
 }
@@ -62,6 +62,7 @@ input.search-input {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(199.55px, 1fr));
   grid-gap: 20px;
+  margin-block-start: 1rem;
 }
 
 .meme-img {
