--- a/css/mq/mq.css
+++ b/css/mq/mq.css
@@ -5,32 +5,30 @@
     margin: 0;
   }
 
+  .meme-editor-container {
+    height: 10px;
+  }
+
   .main-nav .nav-options {
     position: fixed;
     top: 0;
-    right: 0;
-    height: 100vh;
+    height: 25vh;
     display: inline-block;
     background: linear-gradient(90deg, rgba(12, 153, 185, 0.686) 0%, rgba(51, 190, 109, 0.743) 100%);
-    min-width: 40%;
+    min-width: 100%;
     padding-block-start: 1rem;
-    transform: translateX(100%);
+    transform: translateY(-100%);
     transition: transform 0.6s, box-shadow 0.6s;
     line-height: 4.5rem;
   }
 
   body.menu-open .nav-options {
-    transform: translateX(0);
+    transform: translateY(0);
     box-shadow: 0px 0px 5px rgba(72, 72, 72, 0.617);
-    z-index: 20;
   }
 
   body.menu-open .menu-toggle {
     opacity: 0;
-  }
-
-  .meme-gallery.shown .gallery-container {
-    padding: 2.8125rem 4rem;
   }
 
   .main-logo .logo {
@@ -52,8 +50,8 @@
 
   .main-nav .gallery {
     font-size: 2rem;
-    padding-inline-start: 2.95625rem;
-    padding-inline-end: 2.95625rem;
+    padding-inline-start: 8.95625rem;
+    padding-inline-end: 10.95625rem;
     padding-block-start: 0.675rem;
     padding-block-end: 0.675rem;
     border-radius: 0;
@@ -62,37 +60,32 @@
   .main-nav .about {
     margin-inline-start: 0;
     margin-inline-end: 0;
-    padding-inline-start: 3.55625rem;
-    padding-inline-end: 2.95625rem;
+    padding-inline-start: 8.95625rem;
+    padding-inline-end: 10.95625rem;
     padding-block-start: 0.675rem;
-    padding-block-end: 0.675rem;
+    padding-block-end: 0.975rem;
     border-radius: 0;
     font-size: 2rem;
   }
 
   .filter-by-search-by {
     flex-direction: column;
+    max-width: 100%;
   }
 
   .search-input {
-    max-width: 110%;
+    max-width: 100%;
     margin-bottom: 1rem;
   }
 
   .sort-by {
-    padding-inline-start: 5rem;
-    padding-inline-end: 10rem;
     margin-block-end: 1rem;
-    height: 1rem;
-  }
-
-  .more-btn {
-    margin-inline-start: 5rem;
-    margin-block-end: 1rem;
+    font-size: 0.7rem;
   }
 
   .gallery-container {
     margin: 0.5rem;
+    padding: 1rem;
   }
 
   .creator-bg {
@@ -150,6 +143,10 @@
     flex-direction: column;
     max-width: 100%;
     z-index: -1;
+  }
+
+  .meme-gallery {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
