--- a/css/components/main-header.css
+++ b/css/components/main-header.css
@@ -20,31 +20,26 @@
   justify-content: space-between;
 }
 
-.main-nav .gallery {
+.main-nav .gallery,
+.about {
+  line-height: 50px;
   font-size: 1.301875rem;
-  color: white;
   cursor: pointer;
-  padding-inline-start: 1.95625rem;
-  padding-inline-end: 1.95625rem;
-  padding-block-start: 0.475rem;
-  padding-block-end: 0.475rem;
-  border-radius: 20px;
+  border-radius: 30px;
   transition: color 0.5s border-radius 0.5s;
   transition: background-color 0.5s;
+  color: #fff;
+  text-decoration: none;
+  display: block;
+  width: 7.4375rem;
+  text-align: center;
 }
 
 .main-nav .about {
-  font-size: 1.301875rem;
-  color: white;
-  margin-inline-start: 1rem;
-  margin-inline-end: 5rem;
-  padding-inline-start: 1.95625rem;
-  padding-inline-end: 1.95625rem;
-  padding-block-start: 0.475rem;
-  padding-block-end: 0.475rem;
-  border-radius: 20px;
-  transition: color 0.5s border-radius 0.5s;
-  transition: background-color 0.5s;
+  margin-inline-end: 1.5rem;
+}
+.main-nav .gallery {
+  margin-inline-end: 1.5rem;
 }
 
 .gallery:hover,
