--- a/css/components/meme-gallery.css
+++ b/css/components/meme-gallery.css
@@ -14,8 +14,9 @@
 .search-input {
   background-color: #22252c;
   border-radius: 29px;
-  width: 33.8125rem;
+  width: 33.3%;
   padding-left: 1rem;
+  margin-right: 1rem;
   font-size: 1.301875rem;
   border: none;
   font-family: poppins-light;
@@ -24,7 +25,7 @@
 input.search-input {
   background-image: url(/icons/search-icon.png);
   background-repeat: no-repeat;
-  background-position-x: 30rem;
+  background-position-x: 95%;
   background-position-y: 0.5rem;
 }
 
@@ -36,11 +37,11 @@ input.search-input {
 
 .sort-by {
   /* box-sizing: content-box; */
-  width: 100%;
+  width: 10.3%;
   background-color: #c2c2c2b6;
-  flex-grow: 1;
   color: white;
   border-radius: 50px;
+  flex-grow: 1;
   font-family: poppins-regular;
   font-size: 2rem;
   justify-content: space-around;
@@ -56,6 +57,7 @@ input.search-input {
   padding-block-start: 0.3rem;
   font-size: 1.19875rem;
   background: linear-gradient(90deg, rgba(12, 152, 185, 1) 0%, rgba(51, 190, 109, 1) 100%);
+  margin-left: 1rem;
 }
 
 .meme-gallery {
