--- a/css/components/screen.css
+++ b/css/components/screen.css
@@ -10,7 +10,7 @@
   opacity: 0;
   pointer-events: none;
   transition: opacity 0.6s;
-  /* z-index: 10; */
+  z-index: 10;
 }
 
 body.menu-open .main-screen {
