--- a/css/mq/mq.css
+++ b/css/mq/mq.css
@@ -1,18 +1,19 @@
 /* mobile */
-@media (max-width: 940px) {
+@media (max-width: 900px) {
   .main-nav {
     border-radius: 0;
     margin: 0;
   }
 
-  .meme-editor-container {
-    height: 10px;
+  .gallery-container {
+    /* background-color: transparent; */
+    z-index: -1;
   }
 
   .main-nav .nav-options {
     position: fixed;
     top: 0;
-    height: 25vh;
+    min-height: 35%;
     display: inline-block;
     background: linear-gradient(90deg, rgba(12, 153, 185, 0.686) 0%, rgba(51, 190, 109, 0.743) 100%);
     min-width: 100%;
@@ -20,6 +21,7 @@
     transform: translateY(-100%);
     transition: transform 0.6s, box-shadow 0.6s;
     line-height: 4.5rem;
+    z-index: 100;
   }
 
   body.menu-open .nav-options {
@@ -48,39 +50,46 @@
     cursor: pointer;
   }
 
-  .main-nav .gallery {
-    font-size: 2rem;
-    padding-inline-start: 8.95625rem;
-    padding-inline-end: 10.95625rem;
-    padding-block-start: 0.675rem;
-    padding-block-end: 0.675rem;
-    border-radius: 0;
+  input.search-input {
+    background-position-x: 95%;
+    background-position-y: 0.5rem;
   }
 
-  .main-nav .about {
-    margin-inline-start: 0;
-    margin-inline-end: 0;
-    padding-inline-start: 8.95625rem;
-    padding-inline-end: 10.95625rem;
-    padding-block-start: 0.675rem;
-    padding-block-end: 0.975rem;
-    border-radius: 0;
+  .main-nav .gallery,
+  .about {
     font-size: 2rem;
+    height: 100%;
+    width: 100%;
+    border-radius: 0;
+    padding: 1rem;
+    box-shadow: 0px 0px 5px black;
+  }
+
+  .main-nav .gallery {
+    margin-bottom: 1rem;
   }
 
   .filter-by-search-by {
     flex-direction: column;
-    max-width: 100%;
   }
 
   .search-input {
-    max-width: 100%;
+    width: 100%;
     margin-bottom: 1rem;
+    font-size: 2rem;
   }
 
   .sort-by {
-    margin-block-end: 1rem;
     font-size: 0.7rem;
+    padding: 0.6rem 0.5rem;
+    width: 100%;
+    margin-right: 2rem;
+  }
+
+  .more-btn {
+    padding-inline-start: 0.5rem;
+    padding-inline-end: 0.5rem;
+    margin-left: 0;
   }
 
   .gallery-container {
@@ -98,19 +107,25 @@
 
   .main-editor-canvas {
     margin-inline-start: 0rem;
-    background: no-repeat;
+    margin-inline-end: 0rem;
+    z-index: 1;
   }
 
   .editor-tools {
     margin-inline-start: 0rem;
     margin-block-start: 2rem;
+    padding: 1rem 0.875rem;
     max-width: 100%;
+  }
+
+  .drop-down-font select {
+    width: 10.5rem;
   }
 
   .visual-effects-tool-container {
     flex-direction: column;
     width: 100%;
-    grid-template-columns: repeat(5, 35px);
+    grid-template-columns: repeat(5, 39px);
     padding-inline-end: 2.5rem;
   }
 
@@ -131,18 +146,14 @@
     margin-block-end: 1rem;
   }
 
-  .control-meme-text-container {
-    padding-inline-end: 2rem;
-  }
-
   .control-meme-text-container .btn {
-    width: 25%;
+    margin-left: -1rem;
   }
 
   .canvas-container {
     flex-direction: column;
     max-width: 100%;
-    z-index: -1;
+    z-index: 0;
   }
 
   .meme-gallery {
@@ -151,21 +162,56 @@
 }
 
 /* small */
-@media (min-width: 680px) {
+@media (min-width: 780px) {
   .main-layout {
     max-width: 740px;
     margin: 0 auto;
   }
 }
 
-/* large */
-
-@media (min-width: 940px) {
+/* medium */
+@media (min-width: 900px) {
   .main-layout {
-    max-width: 900px;
+    max-width: 860px;
+    margin: 0 auto;
+  }
+
+  .canvas-container {
+    flex-direction: column;
+  }
+
+  .main-editor-canvas {
+    margin-inline-start: 12rem;
+  }
+
+  .editor-tools {
+    margin-inline-start: 12rem;
   }
 
   .menu-toggle {
     display: none;
+  }
+}
+
+/* large */
+
+@media (min-width: 1020px) {
+  .main-layout {
+    max-width: 980px;
+  }
+
+  .canvas-container {
+    flex-direction: row;
+    max-width: 100%;
+    z-index: 1;
+  }
+
+  .main-editor-canvas {
+    margin-inline-start: 25.0625rem;
+    margin-inline-end: 1rem;
+  }
+
+  .editor-tools {
+    margin-inline-start: 0rem;
   }
 }
