--- a/css/components/meme-gallery.css
+++ b/css/components/meme-gallery.css
@@ -1,13 +1,10 @@
 .meme-generator {
-  /* max-width: 1600px; */
   padding: 0px 20px;
-  /* margin: 0 auto; */
 }
 
 .gallery-container {
-  padding: 2.8125rem 4rem;
+  padding: 2.8125rem 2rem;
   background-color: #383b42;
-  /* padding-inline-start: 22.575rem; */
   border-radius: 10px;
 }
 
@@ -62,19 +59,20 @@ input.search-input {
 
 .meme-gallery {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(199.55px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(175.55px, 1fr));
   grid-gap: 20px;
-  margin-block-start: 1rem;
+  padding: 2rem 2rem;
 }
 
 .meme-img {
   max-width: 100%;
   border-radius: 10px;
-  transition: transform 0.5s box-shadow 0.2s;
+  transition: 0.5s;
   cursor: pointer;
 }
 
 .meme-img:hover {
-  box-shadow: 3px 3px 10px black;
-  transform: translateY(-2px);
+  box-shadow: 0px 3px 15px black;
+  transform: translateY(-5px);
+  filter: saturate(200%);
 }
