--- a/css/components/main-header.css
+++ b/css/components/main-header.css
@@ -14,6 +14,14 @@
   color: white;
   cursor: default;
   padding-inline-start: 5.5rem;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+.main-nav .logo:hover {
+  padding-inline-start: 3rem;
+  text-shadow: 0px 0px 3px black;
+  color: #00f2ca;
 }
 
 .main-nav .nav-options {
@@ -36,7 +44,7 @@
 }
 
 .main-nav .about {
-  margin-inline-end: 1.5rem;
+  margin-inline-end: 4.5rem;
 }
 .main-nav .gallery {
   margin-inline-end: 1.5rem;
