--- a/css/components/meme-creator.css
+++ b/css/components/meme-creator.css
@@ -125,3 +125,26 @@
   filter: contrast(200%);
   transform: translateY(-2px);
 }
+
+.upload-container {
+  padding: 1rem;
+  margin-top: 2rem;
+  background-color: rgba(128, 128, 128, 0.174);
+  text-align: center;
+  font-size: 2rem;
+  font-family: poppins-medium;
+  border-radius: 50px;
+  cursor: pointer;
+  display: none;
+}
+
+.upload-container .share-container a {
+  color: #0066ff;
+  box-shadow: inset 0px 0px 1px black;
+  padding: 1rem;
+}
+
+.upload-container .share-container {
+  margin-top: 2rem;
+  padding-bottom: 1rem;
+}
